listingPage: fix for scrolling on safari mobile.
When there were comments deeply nested being displayed
without overflow set the comments were wider than the
screen.

--- a/assets/less/components/comment.less
+++ b/assets/less/components/comment.less
@@ -90,6 +90,12 @@
   margin-left: 1em;
 }
 
+.comment-content {
+  // Fix for safari mobile side scrolling on deeply
+  // nested comments.
+  overflow: hidden;
+}
+
 .linkbar.comment-title-list {
   width: 100%;
 
